target_group.tf
# Target Group for HTTP traffic to your EC2 instances
resource "aws_lb_target_group" "app_tg" {
  name        = "app-tg"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main_vpc.id
  target_type = "instance"

  health_check {
    path                = "/"
    interval            = 30
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200-399"
    timeout             = 5
  }

  tags = {
    Name = "app-target-group"
  }
}
